# Mastermind

./: CMakeLists.txt  Makefile.win  SDL_Mastermind.dev  SDL_Mastermind.layout  SDL_Mastermind_private.h  SDL_Mastermind_private.rc  SDL_Mastermind_private.res  const.h  es.c  es.h  mastermind.sco  mm.c  score.h
src/: const.h  es.c  main.c  mm.h  score.c
